# ReciteIQ

./: .gitignore  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5966d3da708d_ayah_phoneme_ids_v1.py  5e8adb8274b8_baseline.py  8d136d972aad_nullable_session_location_for_auto_.py
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/asr/: __init__.py  base.py  cloud.py  phoneme_ctc.py  whisper_local.py
backend/app/audio/: vad.py
backend/app/db/: models.py  repo.py  session.py
backend/app/engine/: aligner.py  detector.py  events.py  locate.py  phoneme_index.py  phoneme_tracker.py
backend/app/mutashabeh/: index.py
backend/app/nlp/: normalize.py
backend/app/ws/: phoneme_session.py  session.py
backend/scripts/: bench_asr.py  build_mutashabeh.py  build_phoneme_refs.py  load_quran.py  ws_client.py
backend/tests/: conftest.py  test_detector.py  test_locate.py  test_phoneme_tracker.py
deploy/: docker-compose.yml  reciteiq.cron
deploy/nginx/: reciteiq.conf
docs/: ReciteIQ_FYP_Documentation_v3.md
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/audio/: recorder.ts
frontend/src/components/: JumpBanner.tsx  Logo.tsx  MushafView.tsx  TopBar.tsx
frontend/src/pages/: Home.tsx  Recite.tsx  Summary.tsx
frontend/src/state/: reducer.ts
frontend/src/ws/: client.ts
