[project]
name = "reciteiq-backend"
version = "0.1.0"
description = "ReciteIQ — real-time Quran recitation alignment and correction backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.7",
    "rapidfuzz>=3.10",
    "httpx>=0.28",
    "numpy>=1.26",
]

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.1",
    "silero-vad>=5.1",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "websockets>=14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
